fix mobile nav menu z-index

--- a/src/componentStyles/HouseholdMemberForm.css
+++ b/src/componentStyles/HouseholdMemberForm.css
@@ -1,6 +1,8 @@
 .membersContainer {
   margin-top: 60px;
   width: 100vw;
+  position: relative;
+  z-index: -1;
 }
 
 .newPersonContainer {
@@ -24,7 +26,6 @@
   margin-top: 15px;
   display: inline;
   position: absolute;
-  z-index: 1;
 }
 
 @media only screen and (min-width: 640px) {
